--- a/api/qsharp/microsoft.quantum.bitwise.not.yml
+++ b/api/qsharp/microsoft.quantum.bitwise.not.yml
@@ -2,12 +2,12 @@
 uid: microsoft.quantum.bitwise.not
 name: Not
 type: function
-namespace: Microsoft.Quantum.Bitwise
+namespace: microsoft.quantum.bitwise
 summary: >-
   返回整数的按位 "非"。
 
-  这会执行与内置`~~~`运算符相同的计算。
-remarks: '有关更多详细信息，请参阅[c # ~ 运算符](https://docs.microsoft.com/dotnet/csharp/language-reference/operators/bitwise-complement-operator)。'
+  这会执行与内置运算符相同的计算 `~~~` 。
+remarks: '有关更多详细信息，请参阅 [c # ~ 运算符](https://docs.microsoft.com/dotnet/csharp/language-reference/operators/bitwise-complement-operator) 。'
 examples: >-
   ```qsharp
 
@@ -29,9 +29,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 3de6cbe072ab770fba893c41112df3bb686c3e79
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 7393d7628bff3b4e0b15596119d71b86574180c7
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680654"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89351197"
