--- a/api/qsharp/microsoft.quantum.canon.applycontrolledonint.yml
+++ b/api/qsharp/microsoft.quantum.canon.applycontrolledonint.yml
@@ -2,13 +2,13 @@
 uid: microsoft.quantum.canon.applycontrolledonint
 name: ApplyControlledOnInt
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: 如果控件寄存器状态对应于指定的正整数，则对目标寄存器应用单一操作。
 remarks: >-
   的值 `numberState` 是使用小字节序编码来解释的。
 
 
-  `numberState`最大必须为 $ 2 ^ \texttt{Length （controlRegister）}-$1。
+  `numberState` 最大必须为 $ 2 ^ \texttt{Length (controlRegister) }-$1。
 
   例如， `numberState = 537` 表示 `oracle` 当且仅当 `controlRegister` 处于状态 $ \ket $ 时应用 {537} 。
 syntax: "operation ApplyControlledOnInt (numberState : Int, oracle : ('T => Unit is Adj + Ctl), controlRegister : Qubit[], targetRegister : 'T) : Unit"
@@ -51,9 +51,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 468886684513035d24b3b4881944f2c18fa65e18
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: 00c11c566e74233eeae39b0cefa53f4a8341fcf2
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85886143"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89350755"
