--- a/api/qsharp/microsoft.quantum.math.greatestcommondivisori.yml
+++ b/api/qsharp/microsoft.quantum.math.greatestcommondivisori.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.math.greatestcommondivisori
 name: GreatestCommonDivisorI
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 计算 $a $ 和 $b $ 的最大公因数。 GCD 始终为正值。
 syntax: 'function GreatestCommonDivisorI (a : Int, b : Int) : Int'
 input:
@@ -23,9 +23,9 @@ output:
     isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: e3d717c4f93a686551f22360f0d98186abda65a7
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: ab4f33112471803b9d090c5c26c788ac45c52b16
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673792"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89343921"
