--- a/api/qsharp/microsoft.quantum.measurement.measurepaulis.yml
+++ b/api/qsharp/microsoft.quantum.measurement.measurepaulis.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.measurement.measurepaulis
 name: MeasurePaulis
 type: operation
-namespace: Microsoft.Quantum.Measurement
+namespace: microsoft.quantum.measurement
 summary: 给定多 qubit Pauli 运算符的数组，使用指定的度量小工具测量每个运算符，然后返回结果的数组。
 syntax: 'operation MeasurePaulis (paulis : Pauli[][], target : Qubit[], gadget : ((Pauli[], Qubit[]) => Result)) : Result[]'
 input:
@@ -38,14 +38,14 @@ input:
 output:
   content: Result[]
   types:
-  - summary: 从测量上`paulis` `target`的每个元素获得的结果的数组。
+  - summary: 从测量上的每个元素获得的结果的数组 `paulis` `target` 。
     isArray: true
     isPrimitive: true
     uid: Result
 metadata:
-  ms.openlocfilehash: de1f100a19cda847cfb253fe1dfa01079b9ba676
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 27bb4a6164f8db6a82c1beeb7de1107735870ef0
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82685182"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89332463"
