--- a/api/qsharp/microsoft.quantum.bitwise.rightshiftedl.yml
+++ b/api/qsharp/microsoft.quantum.bitwise.rightshiftedl.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.bitwise.rightshiftedl
 name: RightShiftedL
 type: function
-namespace: Microsoft.Quantum.Bitwise
+namespace: microsoft.quantum.bitwise
 summary: 将数字的按位表示形式向右移位给定的位数。
 remarks: >-
   以下项是等效的：
@@ -20,23 +20,23 @@ input:
   content: '(value : BigInt, amount : Int)'
   types:
   - name: value
-    summary: 要向右移动（不太重要）的按位表示形式的数字。
+    summary: 要 (不太重要) 向右移动的按位表示形式的数字。
     isPrimitive: true
     uid: BigInt
   - name: amount
-    summary: 要向右移动的位数`value` 。
+    summary: 要向右移动的位数 `value` 。
     isPrimitive: true
     uid: Int
 output:
   content: BigInt
   types:
-  - summary: 的值`value`，右移一`amount`位。
+  - summary: 的值，右移一 `value` `amount` 位。
     isPrimitive: true
     uid: BigInt
 metadata:
-  ms.openlocfilehash: c6a61d838141e86d831bb341a1e077927e580dcc
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 191feb351e74e0c4cd96992ffb7c5ee499ec16f4
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680584"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89351095"
