--- a/api/qsharp/microsoft.quantum.bitwise.zbits.yml
+++ b/api/qsharp/microsoft.quantum.bitwise.zbits.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.bitwise.zbits
 name: ZBits
 type: function
-namespace: Microsoft.Quantum.Bitwise
+namespace: microsoft.quantum.bitwise
 summary: 返回一个整数，该整数表示 Pauli 运算符数组的 Z 位。
-remarks: 如果`paulis`数组的长度大于63，则函数将引发。
+remarks: 如果数组的长度大于63，则函数将引发 `paulis` 。
 syntax: 'function ZBits (paulis : Pauli[]) : Int'
 input:
   content: '(paulis : Pauli[])'
@@ -17,15 +17,15 @@ input:
 output:
   content: Int
   types:
-  - summary: 一个整数 $x $，其中二进制表示 $ （{62}\,p_{61}\,p_\,\dots .. p_0） $，其中 $p _i = $0 `paulis[i]`如果`PauliI`为`PauliX` or，其中 $p _i = $1 `paulis[i]` （ `PauliY`如果`PauliZ`为或）。
+  - summary: 二进制表示形式为 $ (的整数 $x p_ {62} \, p_ {61} \, \dots .. \, p_0) $，其中 $p _i = $0 如果 `paulis[i]` 为 or，其中 $p _i = `PauliI` `PauliX` $1 （如果 `paulis[i]` 为或） `PauliY` `PauliZ` 。
     isPrimitive: true
     uid: Int
 seeAlso:
 - xbits
 metadata:
-  ms.openlocfilehash: d7605a48451292792a97e9049125674c6716780f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 38515f1ad8e6f4a11161f4bea0604a21a61c7546
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82676429"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89350908"
