--- a/api/qsharp/microsoft.quantum.canon.applyifa.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyifa.yml
@@ -2,16 +2,16 @@
 uid: microsoft.quantum.canon.applyifa
 name: ApplyIfA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   应用以传统位为依据的 adjointable 操作。
 
 
-  给定一个操作`op`和一个位值`bit`后， `op` `target`如果`bit`为`true`，则应用于。 如果`false`为，则不会`target`发生任何事情。
+  给定一个操作 `op` 和一个位值 `bit` 后， `op` 如果为，则应用于 `target` `bit` `true` 。 如果 `false` 为，则不会发生任何事情 `target` 。
 
-  后缀`A`指示要应用的操作是 adjointable。
+  后缀 `A` 指示要应用的操作是 adjointable。
 examples: >-
-  下面的 qubits 将注册为一个计算基础状态，该状态由给定为值数组的`Bool`传统位字符串表示：
+  下面的 qubits 将注册为一个计算基础状态，该状态由给定为值数组的传统位字符串表示 `Bool` ：
 
 
   ```Q#
@@ -65,9 +65,9 @@ seeAlso:
 - microsoft.quantum.canon.applyifa
 - microsoft.quantum.canon.applyifca
 metadata:
-  ms.openlocfilehash: fca10f4a39c8cdc3941d9a7d06e47e1c6dfefa74
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: f020deb737a40a8a31284aded74a07b3e79469bf
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82676344"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89350534"
