--- a/api/qsharp/microsoft.quantum.canon.applymulticontrolledc.yml
+++ b/api/qsharp/microsoft.quantum.canon.applymulticontrolledc.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applymulticontrolledc
 name: ApplyMultiControlledC
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   应用单个受控操作的多重控制版本。
 
-  修饰符`C`指示 qubit 操作可控制。
+  修饰符 `C` 指示 qubit 操作可控制。
 remarks: >-
   此操作仅使用 clean ancilla qubits。
 
@@ -23,7 +23,7 @@ input:
 
       操作的参数中的第一个 qubit 被认为是一个控件，其余的是假定为目标 qubits。
 
-      `ApplyMultiControlled`始终使用`singlyControlledOp`长度至少为1的参数调用。
+      `ApplyMultiControlled` 始终 `singlyControlledOp` 使用长度至少为1的参数调用。
     isOperation: true
     input:
       types:
@@ -39,14 +39,14 @@ input:
     uid: microsoft.quantum.canon.ccnotop
   - name: controls
     summary: >-
-      要对其`singlyControlledOp`进行控制的 qubits。
+      要对其进行控制的 qubits `singlyControlledOp` 。
 
-      的`controls`长度必须至少为1。
+      的长度 `controls` 必须至少为1。
     isArray: true
     isPrimitive: true
     uid: Qubit
   - name: targets
-    summary: '`singlyControlledOp`作用于的目标 qubits。'
+    summary: 作用于的目标 qubits `singlyControlledOp` 。
     isArray: true
     isPrimitive: true
     uid: Qubit
@@ -60,9 +60,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applymulticontrolledca
 metadata:
-  ms.openlocfilehash: 3b4398dd3845d8767842acb23da3b7c67c210b78
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 1a8fe743affaa0fda26b4e17e4c5f129b43b7331
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82672550"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89358116"
