--- a/api/qsharp/microsoft.quantum.canon.applymulticontrolledca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applymulticontrolledca.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.applymulticontrolledca
 name: ApplyMultiControlledCA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   应用单个受控操作的多重控制版本。
 
-  修饰符`CA`指示 qubit 操作可控制和 adjointable。
+  修饰符 `CA` 指示 qubit 操作可控制和 adjointable。
 remarks: >-
   此操作仅使用 clean ancilla qubits。
 
@@ -23,7 +23,7 @@ input:
 
       操作的参数中的第一个 qubit 假定为控件，而其余的则假定为目标 qubits。
 
-      `ApplyMultiControlled`始终使用`singlyControlledOp`长度至少为1的参数调用。
+      `ApplyMultiControlled` 始终 `singlyControlledOp` 使用长度至少为1的参数调用。
     isOperation: true
     input:
       types:
@@ -41,14 +41,14 @@ input:
     uid: microsoft.quantum.canon.ccnotop
   - name: controls
     summary: >-
-      要对其`singlyControlledOp`进行控制的 qubits。
+      要对其进行控制的 qubits `singlyControlledOp` 。
 
-      的`controls`长度必须至少为1。
+      的长度 `controls` 必须至少为1。
     isArray: true
     isPrimitive: true
     uid: Qubit
   - name: targets
-    summary: '`singlyControlledOp`作用于的目标 qubits。'
+    summary: 作用于的目标 qubits `singlyControlledOp` 。
     isArray: true
     isPrimitive: true
     uid: Qubit
@@ -63,9 +63,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applymulticontrolledc
 metadata:
-  ms.openlocfilehash: 1cb239c8c49ff4f4f8f991d6ad81374f0dd23f7f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 0d54acf4f218dcb091fe6dee6c8763878d2f3546
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82672531"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89358082"
