--- a/api/qsharp/microsoft.quantum.canon.applyoprepeatedlyoverca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applyoprepeatedlyoverca.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.applyoprepeatedlyoverca
 name: ApplyOpRepeatedlyOverCA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: 多次对 qubit 寄存器应用相同的操作。
 syntax: 'operation ApplyOpRepeatedlyOverCA (op : (Qubit[] => Unit is Adj + Ctl), targets : Int[][], register : Qubit[]) : Unit'
 input:
@@ -46,9 +46,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applyseriesofops
 metadata:
-  ms.openlocfilehash: 2aa568ac5d1fdfb3895d1b8519ba95227e3101f1
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 798fb8c5045fa566b32478a61428bdc45c2dae7f
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82672445"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89358014"
