--- a/api/qsharp/microsoft.quantum.logical.notequall.yml
+++ b/api/qsharp/microsoft.quantum.logical.notequall.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.logical.notequall
 name: NotEqualL
 type: function
-namespace: Microsoft.Quantum.Logical
+namespace: microsoft.quantum.logical
 summary: 当且仅当两个输入不相等时，返回 true。
 remarks: >-
   以下项是等效的：
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: '`true`当且仅当`a`不等于时`b`。'
+  - summary: '`true` 当且仅当不 `a` 等于时 `b` 。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: f5e2cb54c330a9caa92a96196391ee0a7f00d408
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 01ab7b67fe80f0ea9496a62de3119749c09bbc65
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674046"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89345179"
