--- a/api/qsharp/microsoft.quantum.logical.notnearlyequald.yml
+++ b/api/qsharp/microsoft.quantum.logical.notnearlyequald.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.logical.notnearlyequald
 name: NotNearlyEqualD
 type: function
-namespace: Microsoft.Quantum.Logical
-summary: 当且仅当两个输入不相等（即，不在1e 的容差中）时，返回 true。
+namespace: microsoft.quantum.logical
+summary: 当且仅当两个输入不 (相等时（即，不在 1e-12) 的容差内），将返回 true。
 remarks: >-
   以下项是等效的：
 
@@ -30,13 +30,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: '`true`当且仅当`a`不与几乎相等时`b`。'
+  - summary: '`true` 当且仅当 `a` 不与几乎相等时 `b` 。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: 021cec48888fba8bad1ec7b1ba47e668892fecff
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 86e376c8d257ebf7206effc0266b3eeb488a1483
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82683580"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89345094"
