--- a/api/qsharp/microsoft.quantum.logical.or.yml
+++ b/api/qsharp/microsoft.quantum.logical.or.yml
@@ -2,10 +2,10 @@
 uid: microsoft.quantum.logical.or
 name: Or
 type: function
-namespace: Microsoft.Quantum.Logical
+namespace: microsoft.quantum.logical
 summary: 返回两个值的布尔析取。
 remarks: >-
-  与`or`运算符不同，此函数不会进行短路，因此，这两个输入都是完全计算的。
+  与 `or` 运算符不同，此函数不会进行短路，因此，这两个输入都是完全计算的。
 
 
   最多短路行为，如下所示：
@@ -33,13 +33,13 @@ input:
 output:
   content: Bool
   types:
-  - summary: '`true`当且仅当`a`或`b`为`true`时。'
+  - summary: '`true` 当且仅当 `a` 或 `b` 为时 `true` 。'
     isPrimitive: true
     uid: Bool
 metadata:
-  ms.openlocfilehash: fb3d62473ec3fd7c40b44bfa919b69d54c5d0218
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e95ecbda0b5a51b7380d77f514af76644689757c
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82683563"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89345077"
