--- a/api/qsharp/microsoft.quantum.math.extendedgreatestcommondivisori.yml
+++ b/api/qsharp/microsoft.quantum.math.extendedgreatestcommondivisori.yml
@@ -2,10 +2,10 @@
 uid: microsoft.quantum.math.extendedgreatestcommondivisori
 name: ExtendedGreatestCommonDivisorI
 type: function
-namespace: Microsoft.Quantum.Math
-summary: 计算元组 $ （u，v） $，以便 $u \cdot a + v \cdot b = \operatorname{GCD} （a，b） $，其中 $ \operatorname{GCD} $ $a $ 最大公因数 $a $ 和 $b $。 GCD 始终为正值。
+namespace: microsoft.quantum.math
+summary: 计算元组 $ (u，v) $，以便 $u \cdot a + v \cdot b = \operatorname{GCD} (a，b) $，其中 $ \operatorname{GCD} $ 是 $a $ 最大公因数 $a $ 和 $b $。 GCD 始终为正值。
 syntax: 'function ExtendedGreatestCommonDivisorI (a : Int, b : Int) : (Int, Int)'
-references: '- 此实现取决于https://en.wikipedia.org/wiki/Extended_Euclidean_algorithm'
+references: '- 此实现取决于 https://en.wikipedia.org/wiki/Extended_Euclidean_algorithm'
 input:
   content: '(a : Int, b : Int)'
   types:
@@ -20,16 +20,16 @@ input:
 output:
   content: (Int, Int)
   types:
-  - summary: 使用属性的元组 $ （u，v） $ $u \cdot a + v \cdot b = \operatorname{GCD} （a，b） $。
+  - summary: 元组 $ (u，v) $，其属性 $u \cdot a + v \cdot b = \operatorname{GCD} (a，b) $。
     types:
     - isPrimitive: true
       uid: Int
     - isPrimitive: true
       uid: Int
 metadata:
-  ms.openlocfilehash: f14516b0dc0a6832250df5a9d107514f9345b6db
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 3a82b1d99ecaeff6916f55caeb50fbe044539a53
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673863"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89344108"
