--- a/api/qsharp/microsoft.quantum.math.extendedgreatestcommondivisorl.yml
+++ b/api/qsharp/microsoft.quantum.math.extendedgreatestcommondivisorl.yml
@@ -2,10 +2,10 @@
 uid: microsoft.quantum.math.extendedgreatestcommondivisorl
 name: ExtendedGreatestCommonDivisorL
 type: function
-namespace: Microsoft.Quantum.Math
-summary: 计算元组 $ （u，v） $，以便 $u \cdot a + v \cdot b = \operatorname{GCD} （a，b） $，其中 $ \operatorname{GCD} $ $a $ 最大公因数 $a $ 和 $b $。 GCD 始终为正值。
+namespace: microsoft.quantum.math
+summary: 计算元组 $ (u，v) $，以便 $u \cdot a + v \cdot b = \operatorname{GCD} (a，b) $，其中 $ \operatorname{GCD} $ 是 $a $ 最大公因数 $a $ 和 $b $。 GCD 始终为正值。
 syntax: 'function ExtendedGreatestCommonDivisorL (a : BigInt, b : BigInt) : (BigInt, BigInt)'
-references: '- 此实现取决于https://en.wikipedia.org/wiki/Extended_Euclidean_algorithm'
+references: '- 此实现取决于 https://en.wikipedia.org/wiki/Extended_Euclidean_algorithm'
 input:
   content: '(a : BigInt, b : BigInt)'
   types:
@@ -20,16 +20,16 @@ input:
 output:
   content: (BigInt, BigInt)
   types:
-  - summary: 使用属性的元组 $ （u，v） $ $u \cdot a + v \cdot b = \operatorname{GCD} （a，b） $。
+  - summary: 元组 $ (u，v) $，其属性 $u \cdot a + v \cdot b = \operatorname{GCD} (a，b) $。
     types:
     - isPrimitive: true
       uid: BigInt
     - isPrimitive: true
       uid: BigInt
 metadata:
-  ms.openlocfilehash: ade2f3451a273b69bcabaeae06ef7b234816291b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: fe9049c6d886b7920706ba92b4e2a19bc33d5d8d
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673838"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89344091"
